--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guia perguntas</title>
+
+    <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
-    <p>Guia de perguntas</p>
+    <h1>Guia de perguntas</h1>
     <hr />
     <h3>Lista de perguntas</h3>
+   
+    <img src="/images/qa.png" alt="Perguntas e respostas">
 </body>
+
 </html>
