Adicionado card no formulario

--- a/src/views/perguntar.ejs
+++ b/src/views/perguntar.ejs
@@ -15,17 +15,22 @@
 
     <div class="container">
 
-        <h3>Realize sua pergunta aqui</h3>
-        <hr />
+        <div class="card">
+            <div class="card-header">
+                <h3>Realize sua pergunta aqui</h3>
+            </div>
 
-        <form action="">
-            <label>Título</label>
-            <input type="text" placeholder="Título" class="form-control">
-            <label>Descrição</label>
-            <textarea type="text" placeholder="Descreva sua pergunta aqui"class="form-control">
-            </textarea>
-            <button class="btn btn-success">Perguntar</button>
-        </form>
+            <div class="card-body">
+                <form action="">
+                    <label>Título</label>
+                    <input type="text" placeholder="Título" class="form-control">
+                    <label>Descrição</label>
+                    <textarea type="text" placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
+                    <button class="btn btn-success">Perguntar</button>
+                </form>
+            </div>
+        </div>
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
