Ajustando o tamanho e o posicionamento do botao perguntar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,3 +16,9 @@ body {
 .btn-success, label {
     margin-top: 10px;
 }
+
+.btn-success {
+    padding: 12px;
+    font-size: 18px;
+    font-weight: bolder;
+}
