--- a/src/views/perguntar.ejs
+++ b/src/views/perguntar.ejs
@@ -25,8 +25,13 @@
                     <label>Título</label>
                     <input type="text" placeholder="Título" class="form-control">
                     <label>Descrição</label>
-                    <textarea type="text" placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
-                    <button class="btn btn-success">Perguntar</button>
+                    <textarea type="text" placeholder="Descreva sua pergunta aqui" class="form-control" rows="3"></textarea>
+                    <div class="d-flex justify-content-end">
+                        <button class="btn btn-success">Perguntar</button>
+                    </div>
+                        
+                    </div>
+                   
                 </form>
             </div>
         </div>
