--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .card {
-    margin-top: 50px;
+    margin-top: 5vh;
     border-radius: 20px;
 }
 
@@ -18,7 +18,12 @@ body {
 }
 
 .btn-success {
-    padding: 12px;
+    padding: 10px 25px;
     font-size: 18px;
     font-weight: bolder;
+}
+
+.img {
+    width: 60px;
+    height: 60px;
 }
