--- a/src/views/perguntar.ejs
+++ b/src/views/perguntar.ejs
@@ -13,11 +13,17 @@
 
 <body>
 
+    <nav class="navbar navbar-dark bg-dark">
+        <a class="navbar-brand" href="/">
+            <img class="img" src="/images/qa.png" alt="Perguntas e respostas">
+        </a>
+    </nav>
+
     <div class="container">
 
         <div class="card">
             <div class="card-header">
-                <h3>Realize sua pergunta aqui</h3>
+                <h3>Realize suas perguntas aqui !!</h3>
             </div>
 
             <div class="card-body">
