Criado a rota de salvar pergunta

--- a/src/views/perguntar.ejs
+++ b/src/views/perguntar.ejs
@@ -11,7 +11,7 @@
                     </div>
 
                     <div class="card-body">
-                        <form action="">
+                        <form action="/salvarpergunta" method="POST">
                             <label>Título</label>
                             <input type="text" placeholder="Título" class="form-control">
                             <label>Descrição</label>
