--- a/src/views/pergunta.ejs
+++ b/src/views/pergunta.ejs
@@ -1,1 +1,19 @@
-<h1>pagina da pergunta</h1>
+<%- include("partials/header.ejs")%>
+
+    <body>
+        <%- include("partials/navbar.ejs")%>
+
+            <div class="container">
+                <hr />
+                <h1>
+                    <%= pergunta.titulo %>
+                </h1>
+
+                <p>
+                    <%= pergunta.descricao %>
+                </p>
+                <hr />
+            </div>
+
+    </body>
+    <%- include("partials/footer.ejs")%>
