--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,9 +11,9 @@
                 <hr />
 
                 <a href="/perguntar" class="btn btn-success">Fazer uma pergunta</a>
-                
+
                 <hr />
-                
+
                 <% perguntas.forEach((pergunta)=> {%>
                     <div class="card">
 
@@ -30,7 +30,7 @@
                         </div>
 
                         <div class="card-footer">
-                            <button class="btn btn-success">Responder</button>
+                            <a href="/pergunta/<%=pergunta.id%>" class="btn btn-success">Responder</a>
                         </div>
 
                     </div>
