--- a/src/views/pergunta.ejs
+++ b/src/views/pergunta.ejs
@@ -13,6 +13,16 @@
                     <%= pergunta.descricao %>
                 </p>
                 <hr />
+
+                <form action="">
+                    <h3 class="tituloListagem">Lista de respostas da pergunta</h3>
+                    <hr />
+
+                    <label>Informe sua resposta:</label>
+                    <textarea rows="3" name="resposta" placeholder="Insira sua resposta aqui"
+                        class="form-control"></textarea>
+                    <button type="submit" class="btn btn-success">Responder</button>
+                </form>
             </div>
 
     </body>
