Campo de formulario com valor dinamico

--- a/src/views/pergunta.ejs
+++ b/src/views/pergunta.ejs
@@ -21,6 +21,7 @@
                     <label>Informe sua resposta:</label>
                     <textarea rows="3" name="resposta" placeholder="Insira sua resposta aqui"
                         class="form-control"></textarea>
+                        <input type="hidden" name="perguntaID" value="<%=pergunta.id%>">
                     <button type="submit" class="btn btn-success">Responder</button>
                 </form>
             </div>
