--- a/src/views/pergunta.ejs
+++ b/src/views/pergunta.ejs
@@ -14,7 +14,7 @@
                 </p>
                 <hr />
 
-                <form action="">
+                <form action="/responder" method="POST">
                     <h3 class="tituloListagem">Lista de respostas da pergunta</h3>
                     <hr />
 
